--- a/public/style.css
+++ b/public/style.css
@@ -161,3 +161,12 @@ select#local:focus {
   outline: none;
   color: #084298;
 }
+.quantidade-equipes {
+  text-align: center;
+  font-size: 0.9rem;
+  color: #555;
+  margin-top: -0.3rem;
+  margin-bottom: 1rem;
+  font-weight: 500;
+}
+
